<?xml version="1.0" ?>
<resources>
    <string name="app_name" translatable="false">LitePipe</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="video">Video</string>
    <string name="cancel">Cancel</string>
    <string name="download">Download</string>
    <string name="menu_downloads">Downloads</string>
    <string name="video_quality">Video Quality</string>
    <string name="confirm">Confirm</string>
    <string name="select_something_first">Please select an item first</string>
    <string name="download_canceled">Download cancelled</string>
    <string name="download_finished">Download complete: \"%1$s\" saved to \"%2$s\"</string>
    <string name="failed_to_download">Failed to download</string>
    <string name="failed_to_download_thumbnail">Failed to download image</string>
    <string name="audio_only">Audio</string>
    <string name="player_gestures">Player Gestures</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="share_thumbnail">Share Thumbnail</string>
    <string name="extension">LitePipe Settings</string>
    <string name="litepipe_settings">LitePipe Settings</string>
    <string name="request_restart">Restart to apply changes</string>
    <string name="restart">Restart</string>
    <string name="display_dislikes">Show dislikes</string>
    <string name="hide_shorts">Hide Shorts</string>
    <string name="action_pause">Pause</string>
    <string name="action_play">Play</string>
    <string name="action_previous">Skip to previous</string>
    <string name="action_next">Skip to next</string>
    <string name="general">General</string>
    <string name="player">Player</string>
    <string name="skip_sponsors">Skip sponsors</string>
    <string name="skip_sponsors_selfpromo">Skip self-promotion</string>
    <string name="skip_sponsors_highlight">Skip highlights</string>
    <string name="failed_to_load_video_formats">Failed to load video formats</string>
    <string name="remember_last_position">Remember position</string>
    <string name="remember_quality">Remember video quality</string>
    <string name="segments">Segments</string>
    <string name="background_play">Background play</string>
    <string name="pip">Picture-in-Picture</string>
    <string name="remember_playback_speed">Remember speed</string>
    <string name="reset">Reset Settings</string>
    <string name="player_speed_default">1x</string>
    <string name="player_quality_auto">Auto</string>
    <string name="player_time_separator"> / </string>
    <string name="action_repeat">Repeat</string>
    <string name="action_fullscreen">Fullscreen</string>
    <string name="hint_volume">Volume %1$d%%</string>
    <string name="hint_brightness">Brightness %1$d%%</string>
    <string name="hint_seek_plus">+%1$ds</string>
    <string name="hint_seek_minus">-%1$ds</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="unlock_screen">Unlock screen</string>
    <string name="error_title">Error</string>
    <string name="copy">Copy</string>
    <string name="debug_info_copied">Debug info copied to clipboard</string>
    <string name="repeat_on">Loop On</string>
    <string name="repeat_off">Loop Off</string>
    <string name="subtitles">Captions</string>
    <string name="subtitles_on">Captions on</string>
    <string name="subtitles_off">Captions off</string>
    <string name="no_subtitles">No captions</string>
    <string name="jumped_to_segment">Jumped to: %1$s</string>
    <string name="jump">Jump</string>
    <string name="remember_resize_mode">Remember resize mode</string>
    <string name="bitrate">Bitrate</string>
    <string name="dropped_frames">Dropped Frames</string>
    <string name="resolution">Resolution</string>
    <string name="video_format">Video Format</string>
    <string name="audio_format">Audio Format</string>
    <string name="resize_mode">Resize Mode</string>
    <string name="resize_fit">Fit</string>
    <string name="resize_fill">Fill</string>
    <string name="resize_zoom">Zoom</string>
    <string name="resize_fixed_width">Fixed Width</string>
    <string name="resize_fixed_height">Fixed Height</string>
    <string name="fps">FPS</string>
    <string name="channels">Channels</string>
    <string name="sample_rate">Sample Rate</string>
    <string name="active_stream_video">Video stream #%1$d [%2$s]: %3$s %4$s %5$s</string>
    <string name="active_stream_audio">Audio stream: %1$s %2$s %3$s</string>
    <string name="no_active_video_stream">No active video stream</string>
    <string name="no_active_audio_stream">No active audio stream</string>
    <string name="unknown">Unknown</string>
    <string name="active_label">Active</string>
    <string name="unknown_bitrate">Unknown bitrate</string>
    <string name="unable_to_get_stream_info">Unable to get stream info</string>
    <string name="no_audio_tracks">No audio tracks available</string>
    <string name="audio_track">Audio Track</string>
    <string name="switched_to_audio_track">Switched to: %1$s</string>
    <string name="info">Info</string>
    <string name="more_options">Options</string>
    <string name="failed_to_load_video_details">Failed to load video details</string>
    <string name="failed_to_load_image">Failed to load image</string>
    <string name="application_not_found">Application not found</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>
    <string name="tap_to_unmute">Tap to unmute</string>
    <string name="threads">Threads</string>
    <string name="app_description">An advanced webview wrapper for YouTube with cool features.</string>
    <string name="source_code">Source Code</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="export_error_log">Export Error Log</string>
    <string name="cache_cleared">Cache cleared</string>
    <string name="failed_to_export_log">Failed to export log</string>
    <string name="version">Version: %1$s</string>
    <string name="check_for_updates">Check for Updates</string>
    <string name="update_available">Update Available: %1$s</string>
    <string name="no_updates_available">You are using the latest version</string>
    <string name="checking_for_updates">Checking for updates…</string>
    <string name="failed_to_check_for_updates">Failed to check for updates</string>
    <string name="clear_cache_confirmation">Are you sure you want to clear app cache?</string>
    <string name="clear">Clear</string>
    <string name="source_link">https://github.com/CodeLab-SK/LitePipe</string>
    <string name="about">About</string>
    <string name="download_tasks_added">Download tasks added</string>
    <string name="download_tasks_added_count">%1$d tasks added to queue</string>
    <string name="download_history">Downloads</string>
    <string name="no_download_records">No Downloads yet...</string>
    <string name="open_file">Open file</string>
    <string name="file_not_found">File not found</string>
    <string name="copy_vid">Copy video ID</string>
    <string name="vid_copied">Video ID copied</string>
    <string name="cancel_download">Cancel</string>
    <string name="retry_download">Retry</string>
    <string name="delete_record">Delete</string>
    <string name="delete_record_confirmation">Delete this record?</string>
    <string name="delete_local_file">Delete local file</string>
    <string name="delete_local_files">Delete local files</string>
    <string name="clear_history">Clear history</string>
    <string name="clear_history_confirmation">Clear all download history?</string>
    <string name="history_cleared">History cleared</string>
    <string name="status_queued">Queued</string>
    <string name="status_downloading">Downloading (%1$d%%)</string>
    <string name="status_merging">Merging…</string>
    <string name="status_completed">Completed</string>
    <string name="status_cancelled">Cancelled</string>
    <string name="status_failed">Failed</string>
    <string name="type_video">Video</string>
    <string name="type_audio">Audio</string>
    <string name="type_subtitle">Subtitle</string>
    <string name="type_thumbnail">Thumbnail</string>
    <string name="status_paused">Paused</string>
    <string name="action_pause_download">Pause</string>
    <string name="action_resume_download">Resume</string>
    <string name="download_progress_with_total">%1$s / %2$s MB (%3$d%%)</string>
    <string name="download_progress_simple">%1$s MB</string>
    <string name="download_status_with_type">%1$s • %2$s</string>
    <string name="filename">Filename</string>
    <string name="reset_extension_title">Reset settings</string>
    <string name="reset_extension_message">Reset all LitePipe settings to default?</string>
    <string name="selected_count">%1$d selected</string>
    <string name="videos_count">%1$d videos</string>
    <string name="size_mb">%.1f MB</string>
    <string name="size_mb_ratio">%.1f MB / %.1f MB</string>
    <string name="delete_everything">Delete everything?</string>
    <string name="delete_items_count">Delete %1$d items?</string>
    <string name="downloads_default_title">Downloads</string>
    <string name="download_singular">Download</string>
    <string name="sponsorblock">SponsorBlock</string>
    <string name="miscellaneous">Miscellaneous</string>

</resources>